# NCNN_Yolov5

./: .gitignore  CMakeLists.txt  NCNN_Windows.cpp  NCNN_Windows.h  README.md  ncnn_yolov5.hpp
quexianyolov5/: quexianyolov5-int8.param  quexianyolov5.param
